syntax = "proto3";
package dev.zberg.test.proto;
option java_multiple_files = true;

service HelloWorldService {
  rpc greet (GreetingRequest) returns (GreetingResponse);
}

message GreetingRequest {
    string greeterName = 1;
}

message GreetingResponse {
    string greeting = 1;
}
